examples/test/testpolicy757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy757
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key18: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value36
      podSelector:
        matchLabels:
          key16: value13
          key48: value14
          key9: value26
